public/assets/css/main.css
/* ... */
/* Responsive Design for Mobile */
@media screen and (max-width: 600px) {
    .controls {
        flex-direction: column;
    }

    .dropdown {
        display: none; /* Hide table / cards dropdown on mobile */
    }

    .controls .search-container {
        width: 100%;
    }

    .controls .search-container input[type="text"] {
        height: 30px;
    }

    .ebay-links a {
        display: block;
    }

    .series-sets {
        display: flex;
        flex-wrap: wrap;
    }

    .set-container {
        flex: none;
        width: 100%;
        margin: 0;
    }

    .set-image {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 140px;
    }

    .set-image img {
        max-width: 100%;
        max-height: 100%;
    }

    .pagination {
        flex-wrap: wrap;
        align-self: center;
    }

    .pagination a {
        margin-bottom: 1em;
    }

    .navbar .container {
        margin: 0;
        width: 90vw;
        max-width: 90vw;
    }

    .navbar-menu {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 100%;
        right: 0;
        z-index: 20;
        width: 50%;
        margin: 0;
        padding: 0;
        background-color: #f5f5f5;
        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
        max-height: 100vh;
        height: auto;
        padding-bottom: 1rem;
    }

    .navbar-menu ul .navbar-item {
        justify-content: end;
        font-weight: bold;
        font-size: 1.25rem;
        padding: 0.75rem 1.5rem;
        border-bottom: 1px solid #009879;
    }
    
    .navbar-menu.is-active {
        display: flex;
        flex-direction: column;
    }
    
    .navbar-menu.is-active ul {
        flex-direction: column;
        align-items: flex-start;
        padding-left: 1rem;
        padding-right: 1rem;
    }
    
    .navbar-menu.is-active ul li {
        margin: 0;
        width: 100%;
    }
    
    .navbar-menu.is-active ul li a {
        padding: 0.75rem;
    }
    
    .navbar-burger {
        display: block;
    }
}

